courses/430_programming-languages/assignment-6/tests/error/hw5_error08.correct
operator '+' requires int * int or string * string, found bool * int
